<resources>
    <string name="app_name">FoursquareApplication</string>
    <string name="skip">Skip</string>
    <string name="skip_logo"><![CDATA[>]]></string>
    <string name="email">Email</string>
    <string name="ryan_wilson">Ryan Wilson</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="or">OR</string>
    <string name="we_have_sent_you_an_otp">We have sent you an OTP.</string>
    <string name="please_enter_it_below">Please enter it below.</string>
    <string name="otp_number">75899</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="get_in">Get in !</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="home">Home</string>
    <string name="about_us">About us</string>
    <string name="add_review">Add Review</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="rate_your_experience">How would you rate your experience?</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="fragment">Fragment</string>
    <string name="favourites">Favourites</string>
    <string name="place_image">Place Image</string>
    <string name="close_dialog">close dialog</string>
    <string name="review">Review</string>
    <string name="photos">Photos</string>
    <string name="overview">Overview</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">11th cross bangalore nagar bangalore kasaragod kerala</string>
    <string name="km">5.4 km</string>
    <string name="amount">$$$$</string>
    <string name="dot">•</string>
    <string name="indian">Indian</string>
    <string name="attil">Attil</string>
    <string name="ratings">7.5</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="select_search_area_on_map">Select Search area on map</string>
    <string name="sort_by">Sort By</string>
    <string name="popular">Popular</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="filter_by">Filter By</string>
    <string name="set_radius">Set Radius</string>
    <string name="rupees_1">₹</string>
    <string name="rupees_2">₹₹</string>
    <string name="rupees_3">₹₹₹</string>
    <string name="rupees_4">₹₹₹₹</string>
    <string name="features">Features</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="saish_gmail_com">saish@gmail.com</string>
    <string name="mobile">9844635685</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="google_maps_key">AIzaSyBG4UoJkONLun3YmPtAXlZkvpRO5rSLnSU</string>
    <string name="no_places_found">No Places Found</string>
</resources>