<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/place_image_favourite"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/place_image"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/attil"
        android:textColor="#1D1D26"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/place_image_favourite"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/rating_background_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#36B000"
        app:cardCornerRadius="3dp"
        app:cardElevation="0dp"
        app:layout_constraintLeft_toLeftOf="@id/name_favourite"
        app:layout_constraintTop_toBottomOf="@id/name_favourite">

        <TextView
            android:id="@+id/rating_favourite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/avenir_book"
            android:text="@string/ratings"
            android:padding="2dp"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/type_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/indian"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/rating_background_favourite"
        app:layout_constraintTop_toBottomOf="@id/rating_background_favourite" />

    <TextView
        android:id="@+id/dot_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/dot"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/type_favourite"
        app:layout_constraintTop_toTopOf="@id/type_favourite" />

    <TextView
        android:id="@+id/price_range_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/amount"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/dot_favourite"
        app:layout_constraintTop_toTopOf="@id/dot_favourite" />

    <TextView
        android:id="@+id/distance_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/km"
        app:layout_constraintLeft_toRightOf="@id/price_range_favourite"
        app:layout_constraintTop_toTopOf="@id/price_range_favourite" />

    <TextView
        android:id="@+id/address_favourite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/address"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/type_favourite"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_favourite" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/name_favourite"
        android:src="@drawable/close_icon_grey"
        android:layout_marginEnd="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>