<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_copy"
    android:gravity="center">

    <ImageView
        android:id="@+id/forgot_password_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/sent_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/forgot_password_logo"
        android:text="@string/we_have_sent_you_an_otp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/avenir_book"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/enter_below"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sent_otp"
        android:fontFamily="@font/avenir_book"
        android:text="@string/please_enter_it_below"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/enter_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#b5abab"
        android:text="@string/enter_otp"
        android:fontFamily="@font/avenir_book"
        android:textSize="16sp"
        android:layout_below="@id/enter_below"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/otp_number"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:fontFamily="@font/avenir_book"
        android:layout_below="@id/enter_otp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:maxLength="6"
        android:paddingBottom="15dp"
        android:backgroundTint="#b5abab"/>

    <TextView
        android:id="@+id/resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#b5abab"
        android:text="@string/resend_otp"
        android:fontFamily="@font/avenir_book"
        android:textSize="16sp"
        android:layout_below="@id/otp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/get_in_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/get_in"
        android:layout_below="@id/resend_otp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:fontFamily="@font/avenir_book"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@drawable/login_button_design"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

</RelativeLayout>