<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SearchFilterFragment">

    <TextView
        android:id="@+id/sort_by_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCCCCC"
        android:fontFamily="@font/avenir_medium"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/sort_by"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/sort_by_radio_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@+id/sort_by_heading">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/popular"
            android:textColor="@drawable/filter_text_color"
            android:gravity="center"
            android:fontFamily="@font/avenir_medium"
            android:textSize="16sp"
            android:background="@drawable/filter_background"
            android:button="@null" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/distance"
            android:textColor="@drawable/filter_text_color"
            android:gravity="center"
            android:fontFamily="@font/avenir_medium"
            android:textSize="16sp"
            android:background="@drawable/filter_background"
            android:button="@null" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rating"
            android:textColor="@drawable/filter_text_color"
            android:fontFamily="@font/avenir_medium"
            android:textSize="16sp"
            android:background="@drawable/filter_background"
            android:button="@null" />

    </RadioGroup>

    <TextView
        android:id="@+id/filter_by_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCCCCC"
        android:fontFamily="@font/avenir_medium"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/filter_by"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/sort_by_radio_group" />

    <TextView
        android:id="@+id/set_radius_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/avenir_book"
        android:text="@string/set_radius"
        android:textColor="#A3A3A3"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/filter_by_heading" />

    <EditText
        android:id="@+id/radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/set_radius_heading"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/price_low"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/filter_background"
        android:button="@null"
        android:textColor="@drawable/filter_text_color"
        android:text="@string/rupees_1"
        android:gravity="center"
        android:fontFamily="@font/avenir_medium"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/price_medium"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radius" />

    <CheckBox
        android:id="@+id/price_medium"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/filter_background"
        android:button="@null"
        android:text="@string/rupees_2"
        android:textColor="@drawable/filter_text_color"
        android:gravity="center"
        android:fontFamily="@font/avenir_medium"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/price_high"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/price_low"
        app:layout_constraintTop_toTopOf="@+id/price_low" />

    <CheckBox
        android:id="@+id/price_high"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/filter_background"
        android:button="@null"
        android:text="@string/rupees_3"
        android:textColor="@drawable/filter_text_color"
        android:gravity="center"
        android:fontFamily="@font/avenir_medium"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/price_highest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/price_medium"
        app:layout_constraintTop_toTopOf="@+id/price_low" />

    <CheckBox
        android:id="@+id/price_highest"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/filter_background"
        android:button="@null"
        android:text="@string/rupees_4"
        android:textColor="@drawable/filter_text_color"
        android:gravity="center"
        android:fontFamily="@font/avenir_medium"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/price_high"
        app:layout_constraintTop_toTopOf="@+id/price_low" />

    <TextView
        android:id="@+id/features_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCCCCC"
        android:fontFamily="@font/avenir_medium"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/features"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/price_low" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/feature_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/features_heading" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>