<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rating_dialog_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/avenir_medium"
            android:text="@string/overall_rating"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/avenir_black"
            android:text="4.5"
            android:textColor="#36B000"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/avenir_medium"
            android:gravity="center"
            android:text="@string/rate_your_experience"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:numStars="5"
            android:progressDrawable="@drawable/custom_rating_bar"
            android:rating="2.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/rating_dialog_background"
            android:fontFamily="@font/avenir_medium"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="#351347"
            android:textSize="20sp" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:background="@drawable/rating_dialog_background"
        app:cardCornerRadius="50dp"
        app:strokeWidth="2dp"
        app:strokeColor="#CCCCCC">

        <ImageView
            android:id="@+id/close_dialog"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/close_dialog"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/close_icon_grey" />
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>